src/style.css
* {
    margin: 0;
    padding: 0;
}

html {
    height: 100%;
}

body {
    background: url(./images/Potatoes-background.jpg);
    height: 100%;
}

@font-face {
    font-family: 'restaurantName';
    src: url('./fonts/7\ Abraham\ Shadow\ Demo.otf') format('otf');
    font-weight: 600;
    font-style: normal;
}

nav {
    background: rgba(100, 115, 125, 0.8);
    border-style: solid;
    border-color: rgba(0, 0, 0, 0.8);
    position: relative;
    top: 0px;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.btn {
    cursor: pointer;
}

#header {
    background: rgba(133, 107, 107, 0.85);
    font-family: 'restaurantName';
    position: relative;
    top: 0px;
    width: 100%;
    height: 7.5vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

p {
    background: rgba(133, 107, 107, 0.85);
    padding: 5%;
    margin: 5%;
    border-style: solid;
    border-color: black;
    text-align: center;
}



#content {
    background: rgba(0, 0, 0, 0.4);
    height: 100%;
}

